--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "fastify": "^5.7.1"
+    "@qdrant/js-client-rest": "^1.16.2",
+    "dotenv": "^17.2.3",
+    "fastify": "^5.7.1",
+    "zod": "^4.3.5"
   }
 }
